--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    
+
     <div class="flash">
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, class: name %>
@@ -18,5 +18,6 @@
 
 
     <%= yield %>
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
